try fix mobile header shift

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -301,6 +301,7 @@ p > img {
   z-index: -2;
   width: 100%;
   padding: 7px 0;
+  padding-top: calc(7px + env(safe-area-inset-top));
   height: 46px;
   background: rgba(0,0,0,0.85);
   @include mobile {
